<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="NotSibling">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/tvnombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:ems="10"
                android:hint="@string/nombre"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.191"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/registrarcoctel" />

            <Button
                android:id="@+id/btnSeagrill"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorseagrill"
                android:onClick="@string/btnSeagrill"
                android:text="@string/btnSeagrill"
                android:textColor="@color/white"
                app:iconPadding="4dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btnSupperclub"
                app:layout_constraintHorizontal_bias="0.487"
                app:layout_constraintStart_toEndOf="@+id/btnChiringuito"
                app:layout_constraintTop_toBottomOf="@+id/logo"
                app:layout_constraintVertical_bias="0.104" />

            <Button
                android:id="@+id/btnSupperclub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorsupperclub"
                android:onClick="@string/btnSupperclub"
                android:text="@string/btnSupperclub"
                android:textColor="@color/white"
                app:iconPadding="4dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/logo"
                app:layout_constraintVertical_bias="0.106" />

            <ImageButton
                android:id="@+id/btnRegistro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:contentDescription="Agregar coctel"
                android:onClick="insertar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.143"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtDecoracion"
                app:srcCompat="@android:drawable/ic_menu_add"
                tools:ignore="HardcodedText" />

            <EditText
                android:id="@+id/txtMetodo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:ems="10"
                android:hint="@string/metodo"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.812"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/registrarcoctel" />

            <EditText
                android:id="@+id/txtDecoracion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:ems="10"
                android:hint="@string/decoracion"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.191"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtDescripcion" />

            <EditText
                android:id="@+id/txtRestaurante"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:autofillHints="no"
                android:ems="10"
                android:hint="@string/restaurante"
                android:inputType="textPersonName"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.812"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtDescripcion" />

            <ImageView
                android:id="@+id/logo"
                android:layout_width="415dp"
                android:layout_height="271dp"
                android:contentDescription="Cocktail bible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/cocktailbible"
                tools:ignore="HardcodedText" />

            <Button
                android:id="@+id/btnChiringuito"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#FA8D6C"
                android:text="@string/btnChiringuito"
                android:textColor="@color/white"
                app:iconPadding="4dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/logo"
                app:layout_constraintVertical_bias="0.106" />

            <TextView
                android:id="@+id/registrarcoctel"
                android:layout_width="284dp"
                android:layout_height="39dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="Registrar un nuevo coctel"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnSupperclub"
                tools:ignore="HardcodedText" />

            <EditText
                android:id="@+id/txtDescripcion"
                android:layout_width="310dp"
                android:layout_height="82dp"
                android:layout_marginTop="12dp"
                android:ems="10"
                android:foregroundGravity="center"
                android:gravity="start|top"
                android:hint="@string/descripcion"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.504"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvnombre" />

            <ImageButton
                android:id="@+id/btnedit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:contentDescription="editar coctel"
                android:onClick="editar"
                app:layout_constraintEnd_toStartOf="@+id/btnborrar"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toEndOf="@+id/btnRegistro"
                app:layout_constraintTop_toBottomOf="@+id/txtDecoracion"
                app:srcCompat="@android:drawable/ic_menu_edit"
                tools:ignore="HardcodedText" />

            <ImageButton
                android:id="@+id/btnborrar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:contentDescription="Borrar coctel"
                android:onClick="borrar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.859"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtDecoracion"
                app:srcCompat="@android:drawable/ic_delete"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="12dp"
                android:text="@string/agregar_coctel"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnRegistro" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="Editar coctel"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintEnd_toStartOf="@+id/textView3"
                app:layout_constraintHorizontal_bias="0.489"
                app:layout_constraintStart_toEndOf="@+id/textView"
                app:layout_constraintTop_toBottomOf="@+id/btnedit"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="Borrar coctel"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.885"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnborrar"
                tools:ignore="HardcodedText" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>