<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Chiringuito"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".Chiringuito">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@+id/BuscarCoctel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.296"
        tools:ignore="NotSibling">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/BuscarCoctel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#F47538"
                android:gravity="center"
                android:hint="Buscar Coctel"
                android:textColorHint="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="HardcodedText,MissingConstraints" />

            <EditText
                android:id="@+id/tvnombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:autofillHints=""
                android:background="@color/colorchiringuito"
                android:ems="10"
                android:gravity="center"
                android:hint="Nombre del coctel"
                android:inputType="textPersonName"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="12sp"
                app:layout_constraintBottom_toTopOf="@+id/tvdescripcion"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/BuscarCoctel"
                app:layout_constraintTop_toBottomOf="@+id/BuscarCoctel"
                app:layout_constraintVertical_bias="0.074"
                tools:ignore="HardcodedText" />

            <EditText
                android:id="@+id/tvdescripcion"
                android:layout_width="309dp"
                android:layout_height="71dp"
                android:layout_marginTop="64dp"
                android:autofillHints=""
                android:background="@color/colorchiringuito"
                android:ems="10"
                android:gravity="start|top"
                android:hint="Descripción"
                android:inputType="textMultiLine"
                android:textColor="@color/white"
                android:textColorHint="#FFFFFF"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/BuscarCoctel"
                tools:ignore="HardcodedText" />

            <EditText
                android:id="@+id/tvmetodo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="24dp"
                android:background="@color/colorchiringuito"
                android:ems="10"
                android:gravity="center"
                android:hint="Metodo de preparación"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.808"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvdescripcion"
                tools:ignore="HardcodedText" />

            <EditText
                android:id="@+id/tvdecoracion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="24dp"
                android:background="@color/colorchiringuito"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/decoracion"
                android:inputType="textPersonName"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.191"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvdescripcion"
                tools:ignore="Autofill" />

            <ImageButton
                android:id="@+id/buscar"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_gravity="right"
                android:background="@color/colorchiringuito"
                android:contentDescription="Buscar coctel"
                android:onClick="buscar"
                app:layout_constraintBottom_toTopOf="@+id/tvdescripcion"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.36"
                app:layout_constraintStart_toEndOf="@+id/tvnombre"
                app:layout_constraintTop_toBottomOf="@+id/BuscarCoctel"
                app:layout_constraintVertical_bias="0.444"
                app:srcCompat="@android:drawable/ic_menu_search"
                tools:ignore="HardcodedText,RtlHardcoded" />


            <TextView
                android:id="@+id/Signatures"
                android:layout_width="match_parent"
                android:layout_height="59dp"
                android:layout_marginTop="20dp"
                android:background="@color/colorchiringuito"
                android:gravity="center"
                android:text="@string/signatures"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/botonvolverchiringuito"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvdecoracion"
                app:layout_constraintVertical_bias="0.106" />

            <TextView
                android:id="@+id/DannyMargarita"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/danny_s_margarita"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Signatures" />

            <TextView
                android:id="@+id/CocoMojito"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/coco_chili_mojito"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Signatures" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginTop="24dp"
                android:contentDescription="@string/coco_chili_mojito"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/CocoMojito"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/cocomojito" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginTop="24dp"
                android:contentDescription="@string/danny_s_margarita"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/imageView"
                app:layout_constraintHorizontal_bias="0.152"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/DannyMargarita"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/dannymargarita">

            </ImageView>

            <Button
                android:id="@+id/botonvolverchiringuito"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:backgroundTint="#FF333333"
                android:text="@string/btnvolver"
                android:textSize="11sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.547"
                app:layout_constraintStart_toStartOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>